2005-03-01  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.5-cvs-RC2-b19

	* Fix: Mambo support for the upload applet needed a new cookie to be passed.

2005-03-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b18

	* Fix: Adjust skins:
	  - greenpurple
	  - hotred
	  - white1

2005-02-26  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b17

	* Change: Fix the 'No images uploaded' condition

	* Fix: Destroying the session at logout also prevented album redirection because
	  $gallery->session->album was empty

	* Fix: User input checking

2005-02-24  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b16

	* Change: css enhancement for better readability of links in attention messages.

	* Change: Make "Hey! Add some photos." a link to add photos.

	* Fix: Added width for adminbox in base.css.
	  So "return to gallery" is correct aligned in tools/despam and tools/find-orphanes.

	* Fix: Show public stats link only when there are accessable photos.

	* Fix: Only check Files for EXIF Data on uploading that may have it. 

	* Change: Added more Debug messages in upload.

	* Change: The blue bar is now only in standalone, not in base.css for all.

2005-02-23  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b15

	* Fix: Switch use_exif back to what it was supposed to be.
	  The change in behavior was based on a user comment making me
	  misunderstand what the old behavior was.

2005-02-23  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b14

	* Change: stats link descriptions

	* Fix: phpBB modules.php was relying on globals that didn't exist

2005-02-21  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b13

	* Change: Texts in setup/config_data.inc

	* Change: css consolidation in setup/config_data.inc

2005-02-21  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b12

	* Fix: css class in EXIF Table

	* Fix: adjust skins:
	  - bpurple
	  - bred

2005-02-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b11

	* Fix: css classes:
	  - captionator.php
	  - view_album.php