@@ -128,15 +128,15 @@ $stats['layout'] = array(
 	'total'		=> array('type' => 'text',
 				 'default' => '-1',
 				 'text' => _("Controls the maximum number of photos listed, -1 for all")),
-	'sgr'		=> array('type' => 'checkbox',
-				 'default' => '',
-				 'text' => _("Use Grid Layout")),
-	'rows'		=> array('type' => 'text',
-				 'default' => (isset($gallery->app->default["rows"])) ? $gallery->app->default["rows"] : 3,
-				 'text' => _("Controls the number of rows to display in grid mode")),
-	'cols'		=> array('type' => 'text',
-				 'default' => (isset($gallery->app->default["cols"])) ? $gallery->app->default["cols"] : 3,
-				 'text' => _("Controls the number of columns to display in grid mode")),
+//	'sgr'		=> array('type' => 'checkbox',
+//				 'default' => '',
+//				 'text' => _("Use Grid Layout")),
+//	'rows'		=> array('type' => 'text',
+//				 'default' => (isset($gallery->app->default["rows"])) ? $gallery->app->default["rows"] : 3,
+//				 'text' => _("Controls the number of rows to display in grid mode")),
+//	'cols'		=> array('type' => 'text',
+//				 'default' => (isset($gallery->app->default["cols"])) ? $gallery->app->default["cols"] : 3,
+//				 'text' => _("Controls the number of columns to display in grid mode")),
 	'addLinksPos'	=> array('type' => 'select',
 				 'options' => array ('abovecomments'	=> _("Above the comments"), 
 						     'oncaptionline'	=> _("In the caption line"),
