@@ -1,3 +1,10 @@
+2005-03-01  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b20
+
+	* Fix: Disable 'grid mode' in stat.php - there's no way to address the display
+	  issues that it has during RC.
+
+	* Change: Update 'embedding' text to mention the 'Ignore register_globals' option
+
 2005-03-01  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.5-cvs-RC2-b19
 
 	* Fix: Mambo support for the upload applet needed a new cookie to be passed.
